comment out support information

--- a/journal.tex
+++ b/journal.tex
@@ -53,7 +53,7 @@
 \curraddr{}
 \email{aviv@einstein.yu.edu}
 %    \thanks will become a 1st page footnote.
-\thanks{The first author was supported in part by NSF Grant \#000000.}
+% \thanks{The first author was supported in part by NSF Grant \#000000.}
 
 %    Information for second author
 \author{Raymond S. Puzio}
@@ -61,7 +61,7 @@
 %    Current address
 \curraddr{}
 \email{rsp@novres.org}
-\thanks{Support information for the second author.}
+% \thanks{Support information for the second author.}
 
 %    Information for third author
 \author{Cameron Smith}
@@ -69,16 +69,16 @@
 %    Current address
 \curraddr{}
 \email{cameron.smith@med.einstein.yu.edu}
-\thanks{Support information for the second author.}
+% \thanks{Support information for the second author.}
 
 %    General info
-\subjclass[2000]{Primary 54C40, 14E20; Secondary 46E25, 20C20}
+% \subjclass[2000]{Primary 54C40, 14E20; Secondary 46E25, 20C20}
 
-\date{January 1, 2001 and, in revised form, June 22, 2001.}
+% \date{January 1, 2001 and, in revised form, June 22, 2001.}
 
-\dedicatory{This paper is dedicated to our advisors.}
+% \dedicatory{This paper is dedicated to our advisors.}
 
-\keywords{Differential geometry, algebraic geometry}
+% \keywords{Differential geometry, algebraic geometry}
 
 \begin{abstract}
 The analysis of dynamical systems that attempts to model chemical reaction, gene-regulatory, population, and ecosystem networks all rely on models having many parameters and thus many degrees of freedom. When the details of a system are unknown, one effective approach is to study the dynamical properties of a collection of models determined by constraints applying to all such systems. Here we analyze the stability of a large class of dynamical systems to perturbations in the underlying structure of the system: a property referred to as \emph{structural stability}. In particular, we precisely determine the probability distribution over system connectivity, a parameter which has significant implications from the study of gene-regulatory networks to ecosystem dynamics, of structural stability for systems with two interacting components. We show in this case that structural stability has a non-monotonic relationship with system connectivity. These results support future work attempting to characterize the scaling relationship between structural stability and system connectivity. The latter investigation is necessary to evaluate several conjectured but ultimately untested hypotheses about biological networks.
