--- a/journal.tex
+++ b/journal.tex
@@ -379,7 +379,7 @@ Let us start by fixing some notation.  Suppose that $M$ is of size $n
 $r_j$, writing $p(x) = x^n + \sum_{k=1}^n s_k x^{n-k} = \prod_{k=1}^n
 (x-r_k)$.
 
-Introduce $V$ as the parameter space of all polynomials or degree $n$
+Introduce $V$ as the parameter space of all polynomials of degree $n$
 with real coefficients.  In other words, $V$ is a real vector space of
 dimension $n$ whose coordinates we will identify with the coefficients
 $s_k$ of our polynomial.  We now partition this space into regions
